--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -24,5 +24,9 @@
   "bugs": {
     "url": "https://github.com/advclb/foobar/issues"
   },
-  "homepage": "https://github.com/advclb/foobar#readme"
+  "homepage": "https://github.com/advclb/foobar#readme",
+  "peerDependencies": {
+    "react": "*",
+    "react-router-dom": "*"
+  }
 }
