--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -25,7 +25,11 @@
     "url": "https://github.com/advclb/foobar/issues"
   },
   "homepage": "https://github.com/advclb/foobar#readme",
+  "dependencies": {
+    "@advclb/foobar-base": "0.0.0"
+  },
   "peerDependencies": {
-    "vue": "*"
+    "vue": "*",
+    "vue-class-component": "*"
   }
 }
