--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@advclb/foobar-base",
+  "name": "@advclb/design-system-base",
   "version": "0.0.0",
-  "description": "shared data, functions and types for foobar component",
+  "description": "shared data, functions and types for design system",
   "main": "dist/index.js",
   "module": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -10,18 +10,22 @@
     "lib/*"
   ],
   "scripts": {
-    "build": "ac lib:build",
+    "build": "../../node_modules/.bin/ac lib:build",
     "test": "jest",
-    "lint": "ac lint"
+    "lint": "../../node_modules/.bin/ac lint"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/advclb/foobar.git"
+    "url": "git+https://github.com/advclb/design-system.git"
   },
-  "author": "First Last <first.last@example.com>",
+  "author": {
+    "name": "Guo Yunhe",
+    "email": "guo@adventureclub.io",
+    "url": "https://guoyunhe.me/"
+  },
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/advclb/foobar/issues"
+    "url": "https://github.com/advclb/design-system/issues"
   },
-  "homepage": "https://github.com/advclb/foobar#readme"
+  "homepage": "https://github.com/advclb/design-system#readme"
 }
