--- a/package.json
+++ b/package.json
@@ -1,30 +1,11 @@
 {
-  "name": "@advclb/foobar",
-  "version": "0.0.0",
-  "description": "Foobar library",
-  "main": "dist/index.js",
-  "module": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "files": [
-    "dist/*",
-    "lib/*"
-  ],
+  "private": true,
   "scripts": {
     "install": "lerna bootstrap",
     "build": "lerna run build",
     "test": "lerna run test",
     "lint": "lerna run lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/advclb/foobar.git"
-  },
-  "author": "First Last <first.last@example.com>",
-  "license": "GPL-3.0",
-  "bugs": {
-    "url": "https://github.com/advclb/foobar/issues"
-  },
-  "homepage": "https://github.com/advclb/foobar#readme",
   "devDependencies": {
     "@advclb/scripts": "latest",
     "@angular/core": "latest",
