--- a/packages/sass/package.json
+++ b/packages/sass/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "@advclb/foobar-sass",
+  "name": "@advclb/design-system-sass",
   "version": "0.0.0",
-  "description": "base style with sass variables for foobar component",
+  "description": "base style with sass variables for design system",
   "main": "index.scss",
   "sass": "index.scss",
   "style": "index.scss",
   "scripts": {
-    "lint": "ac lint"
+    "lint": "../../node_modules/.bin/ac lint"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/advclb/foobar.git"
+    "url": "git+https://github.com/advclb/design-system.git"
   },
-  "author": "First Last <first.last@example.com>",
+  "author": {
+    "name": "Guo Yunhe",
+    "email": "guo@adventureclub.io",
+    "url": "https://guoyunhe.me/"
+  },
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/advclb/foobar/issues"
+    "url": "https://github.com/advclb/design-system/issues"
   },
-  "homepage": "https://github.com/advclb/foobar#readme"
+  "homepage": "https://github.com/advclb/design-system#readme"
 }
