--- a/package.json
+++ b/package.json
@@ -4,29 +4,33 @@
     "install": "lerna bootstrap",
     "build": "lerna run build",
     "test": "lerna run test",
-    "lint": "lerna run lint"
+    "lint": "eslint --ext .ts,.tsx --fix . && stylelint --fix **/*.css **/*.scss"
   },
   "devDependencies": {
-    "@advclb/scripts": "latest",
-    "@angular/core": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "eslint": "latest",
-    "eslint-config-advclb": "latest",
-    "eslint-config-advclb-react": "latest",
-    "eslint-config-advclb-typescript": "latest",
-    "gh-pages": "latest",
-    "jest": "latest",
-    "jest-puppeteer": "latest",
-    "lerna": "latest",
-    "prettier": "latest",
-    "puppeteer": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "stylelint": "latest",
-    "stylelint-config-advclb": "latest",
-    "typescript": "latest",
-    "vue": "latest",
-    "vue-class-component": "latest"
+    "@advclb/scripts": "^0.5.1",
+    "@angular/core": "^9.1.1",
+    "@types/classnames": "^2.2.10",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
+    "@types/react-router-dom": "^5.1.3",
+    "classnames": "^2.2.6",
+    "eslint": "^6.8.0",
+    "eslint-config-advclb": "^0.5.0",
+    "eslint-config-advclb-react": "^0.5.0",
+    "eslint-config-advclb-typescript": "^0.5.0",
+    "jest": "^25.3.0",
+    "jest-puppeteer": "^4.4.0",
+    "lerna": "^3.20.2",
+    "prettier": "^2.0.4",
+    "puppeteer": "^2.1.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
+    "stylelint": "^13.3.1",
+    "stylelint-config-advclb": "^0.3.1",
+    "typescript": "^3.8.3",
+    "vue": "^2.6.11",
+    "vue-class-component": "^7.2.3",
+    "zone.js": "^0.10.3"
   }
 }
