--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -32,8 +32,13 @@
   "dependencies": {
     "@advclb/design-system-base": "0.0.0"
   },
+  "devDependencies": {
+    "@advclb/design-system-css": "0.0.0",
+    "@advclb/design-system-sass": "0.0.0"
+  },
   "peerDependencies": {
     "react": "*",
-    "react-router-dom": "*"
+    "react-router-dom": "*",
+    "classnames": "*"
   }
 }
