--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -32,6 +32,10 @@
   "dependencies": {
     "@advclb/design-system-base": "0.0.0"
   },
+  "devDependencies": {
+    "@advclb/design-system-css": "0.0.0",
+    "@advclb/design-system-sass": "0.0.0"
+  },
   "peerDependencies": {
     "vue": "*",
     "vue-class-component": "*"
