--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
     "install": "lerna bootstrap",
     "build": "lerna run build",
     "test": "lerna run test",
-    "lint": "eslint --ext .ts,.tsx --fix . && stylelint --fix **/*.css **/*.scss"
+    "lint": "prettier --write . && eslint --ext .ts,.tsx --fix . && stylelint --fix **/*.css **/*.scss"
   },
   "devDependencies": {
-    "@advclb/scripts": "^0.5.1",
+    "@advclb/react-docgen-loader": "^0.1.0",
+    "@advclb/sassdoc-loader": "^0.1.0",
+    "@advclb/scripts": "^0.6.0",
     "@angular/core": "^9.1.1",
     "@types/classnames": "^2.2.10",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
-    "@types/react-router-dom": "^5.1.3",
+    "@types/react-router-dom": "^5.1.4",
     "classnames": "^2.2.6",
     "eslint": "^6.8.0",
-    "eslint-config-advclb": "^0.5.0",
-    "eslint-config-advclb-react": "^0.5.0",
-    "eslint-config-advclb-typescript": "^0.5.0",
+    "eslint-config-advclb": "^0.5.2",
+    "eslint-config-advclb-react": "^0.5.2",
+    "eslint-config-advclb-typescript": "^0.5.2",
     "jest": "^25.3.0",
     "jest-puppeteer": "^4.4.0",
     "lerna": "^3.20.2",
