--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -12,8 +12,7 @@
   "scripts": {
     "start": "../../node_modules/.bin/ac doc:start",
     "build": "../../node_modules/.bin/ac doc:build && ac lib:build",
-    "test": "jest",
-    "lint": "../../node_modules/.bin/ac lint"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
