--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -10,7 +10,7 @@
     "lib/*"
   ],
   "scripts": {
-    "build": "../../node_modules/.bin/ac lib:build",
+    "build": "ac lib:build",
     "test": "jest"
   },
   "repository": {
