--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.4",
+    "@types/react-syntax-highlighter": "^11.0.4",
     "classnames": "^2.2.6",
     "eslint": "^6.8.0",
     "eslint-config-advclb": "^0.5.2",
@@ -29,6 +30,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
+    "react-syntax-highlighter": "^12.2.1",
     "stylelint": "^13.3.1",
     "stylelint-config-advclb": "^0.3.1",
     "typescript": "^3.8.3",
